--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9994,6 +9994,11 @@ a.text-dark:focus {
   }
 }
 
+body {
+  padding: 10px;
+  padding-bottom: 20px;
+}
+
 .navbar-laravel {
   background-color: #fff;
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
@@ -10001,11 +10006,10 @@ a.text-dark:focus {
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
+  text-align: center;
+  position: fixed;
+  bottom: 0px;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
   background-color: #f5f5f5;
 }
 
