--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,22 +1,24 @@
-
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-
 // Variables
 @import "variables";
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+body {
+  padding: 10px;
+  padding-bottom: 20px;
+}
 
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
+  text-align: center;
+  position: fixed;
+  bottom: 0px;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
   background-color: #f5f5f5;
 }
